# alive2

./: BugList.md  CMakeLists.txt  Dockerfile.metadata  README.md  build.sh  build_docker.sh  diff.sh  flake.nix
.github/workflows/: aslp.yml  build.yml  codeql.yml
backend_tv/: README.md  Semantics.g4  adjust_src.cpp  arm2llvm.cpp  arm2llvm.h  arm2llvm_arith.cpp  arm2llvm_bitwise.cpp  arm2llvm_branch.cpp  arm2llvm_cond.cpp  arm2llvm_float.cpp  arm2llvm_fp_vec.cpp  arm2llvm_insns.cpp  arm2llvm_int_vec.cpp  arm2llvm_load.cpp  arm2llvm_misc.cpp  inline_asm_lift.cpp  inline_asm_lift.h  lifter.cpp  lifter.h  mc2llvm.cpp  mc2llvm.h  riscv2llvm.cpp  riscv2llvm.h  riscv2llvm_insns.cpp  run_backend.cpp  streamerwrapper.cpp  streamerwrapper.h
backend_tv/aslp/: CMakeLists.txt  README.md  Semantics.g4  aarch64_map.hpp  aslp_bridge.cpp  aslp_bridge.hpp  aslp_main.cpp  aslt_visitor.cpp  aslt_visitor.h  aslt_visitor.hpp  interface.h  interface.hpp
backend_tv/aslp/golden/: unit_tests.sh
backend_tv/aslp/tools/: aslp_main.cpp
backend_tv/grammar/: CMakeLists.txt  Semantics.g4  main.cpp
backend_tv/scripts/: classify.pl  make-report.pl  parse_tablegen.py  prepare.py  process.py  rename_funcs.pl  run-arm-tv.pl
ir/: function.cpp  instr.cpp  instr.h  state.cpp  state.h  value.cpp
llvm_util/: compare.cpp  llvm2alive.cpp  llvm_optimizer.cpp  utils.cpp
scripts/: alivecc.in  opt-alive.sh  reduce-interesting-to-html.in  reduce-interesting.in
smt/: expr.cpp  expr.h
tests/alive-tv/: clmul.srctgt.ll  pext-pdep.srctgt.ll
tests/alive-tv/attrs/: align-callsite-withnoundef.srctgt.ll
tests/alive-tv/bugs/: datalayout-mismatch.src.ll  datalayout-mismatch.tgt.ll
tests/alive-tv/fp/: denormal-attrs-mismatch.srctgt.ll  denormal-ieee-default.srctgt.ll  fadd-denormal-dynamic-input-mismatch.srctgt.ll  fadd-denormal-dynamic-io-mismatch.srctgt.ll  fadd-denormal-input-positivezero-mismatch.srctgt.ll  fdiv-denormal-f32-fold.srctgt.ll  fdiv-denormal-f32-no-fold.srctgt.ll  fmul-denormal-input-preservesign-mismatch.srctgt.ll
tests/arm-tv/aslp/: fptoui.aarch64.ll
tests/arm-tv/globals/: thread_local.aarch64.ll
tests/arm-tv/misc/: memcmp.aarch64.ll
tests/arm-tv/ptrroundtrips/: round-trip-test-0.aarch64.ll  round-trip-test-1.aarch64.ll  round-trip-test-2.aarch64.ll  round-trip-test-3.aarch64.ll  round-trip-test-4.aarch64.ll  round-trip-test-5.aarch64.ll
tests/clang-tv/: parallel.c
tests/inline-asm/: arith.aarch64.srctgt.ll  arith.riscv64.srctgt.ll  asm_goto.aarch64.srctgt.ll  bit_count.aarch64.srctgt.ll  bit_ops.riscv64.srctgt.ll  bitfield.aarch64.srctgt.ll  bitwise.aarch64.srctgt.ll  bitwise.riscv64.srctgt.ll  both_sides.aarch64.srctgt.ll  cls.aarch64.srctgt.ll  conditional.aarch64.srctgt.ll  divide_by_3.aarch64.srctgt.ll  divmod.aarch64.srctgt.ll  idioms.aarch64.srctgt.ll  memory.aarch64.srctgt.ll  multi_out_simple.aarch64.srctgt.ll  sdiv.aarch64.srctgt.ll  shifts.aarch64.srctgt.ll  shifts.riscv64.srctgt.ll  unsound.aarch64.srctgt.ll  widening_mul.aarch64.srctgt.ll
tests/lit/lit/: display.py  main.py
tests/lit/lit/formats/: alive2test.py
tests/riscv-tv/abi/: double.riscv.ll  double_pass_by_gpr.riscv.ll  float.riscv.ll  float_pass_by_gpr.riscv.ll  fp_caller.riscv.ll  fp_caller2.riscv.ll  fp_int_fp.riscv.ll  half.riscv.ll
tests/riscv-tv/arith/: remu.riscv.ll
tests/riscv-tv/branch/: tricky.riscv.ll  tricky2.riscv.ll  tricky3.riscv.ll  tricky4.riscv.ll
tests/riscv-tv/bugs/: c_addi4spn.riscv.ll  sp_scale.riscv.ll
tests/riscv-tv/calls/: machine_outline.riscv.ll  promote2.riscv.ll
tests/riscv-tv/extensions/b/: add_uw.riscv.ll  bclri.riscv.ll  bexti.riscv.ll  binvi.riscv.ll  bseti.riscv.ll  clz.riscv.ll  cpop.riscv.ll  ctz.riscv.ll  ctzw.riscv.ll  max.riscv.ll  minu.riscv.ll  orc_b.riscv.ll  orc_b2.riscv.ll  orn.riscv.ll  rev8.riscv.ll  rol.riscv.ll  rolw.riscv.ll  ror.riscv.ll  rori.riscv.ll  roriw.riscv.ll  rorw.riscv.ll  sext_h.riscv.ll  sh1add.riscv.ll  sh2add.riscv.ll  slli_uw.riscv.ll  xnor.riscv.ll  zext_h.riscv.ll  zext_w.riscv.ll
tests/riscv-tv/extensions/c/: c_addiw.riscv.ll  c_ldsp.riscv.ll
tests/riscv-tv/extensions/f/: basic.riscv.ll  ceil-half.riscv.ll  fabs.riscv.ll  fadd_d.riscv.ll  fadd_s.riscv.ll  fclass.riscv.ll  fcvt_d_l.riscv.ll  fcvt_d_s.riscv.ll  fcvt_d_w.riscv.ll  fcvt_d_wu.riscv.ll  fcvt_lu_s.riscv.ll  fcvt_s_d.riscv.ll  fcvt_s_l.riscv.ll  fcvt_s_lu.riscv.ll  fcvt_w_s.riscv.ll  fdiv_d.riscv.ll  fdiv_h.riscv.ll  fdiv_s.riscv.ll  feq_s.riscv.ll  fld.riscv.ll  fle_s.riscv.ll  flt_s.riscv.ll  flw.riscv.ll  fmadd_s.riscv.ll  fmin_d.riscv.ll  fmin_h.riscv.ll  fmin_s.riscv.ll  fmsub_s.riscv.ll  fmul_s.riscv.ll  fmv_d_x.riscv.ll  fmv_w_x.riscv.ll  fmv_x_w.riscv.ll  fnmadd_s.riscv.ll  fnmsub_s.riscv.ll  fsd.riscv.ll  fsgnj_s.riscv.ll  fsgnjn_s.riscv.ll  fsgnjx_s.riscv.ll  fsqrt_d.riscv.ll  fsqrt_h.riscv.ll  (+6 more)
tests/riscv-tv/extensions/m/: div.riscv.ll
tests/riscv-tv/misc/: addi16sp.riscv.ll  c_addi4spn.riscv.ll  c_lwsp.riscv.ll  spaceship1.riscv.ll  spaceship2.riscv.ll  spaceship3.riscv.ll  spaceship4.riscv.ll  spaceship5.riscv.ll  spaceship6.riscv.ll  spaceship7.riscv.ll  spaceship8.riscv.ll
tests/unit/: clmul.opt  pdep.opt  pext.opt
tools/: alive-exec.cpp  alive-tv.cpp  alive.cpp  alive_lexer.re  alive_parser.cpp  backend-tv.cpp  quick-fuzz.cpp  tokens.h  transform.cpp  transform.h
tv/: CMakeLists.txt  tv.cpp
util/: cache.cpp  cache.h  errors.cpp  errors.h  parallel.h  parallel_null.cpp
